manifest/objects/ALTF__Opportunity_Competitor__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing extra competitor information for each competitor associated with the Opportunity</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__OpportunityCompetitor__c</fullName>
        <label>OpportunityCompetitor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <label>DM Opportunity Extra</label>
        <referenceTo>ALTF__Opportunity__c</referenceTo>
        <relationshipLabel>Altify Opportunity Competitors</relationshipLabel>
        <relationshipName>DM_Opportunity_Competitor_Extras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Strategy__c</fullName>
        <label>Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Disengage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Strengths__c</fullName>
        <label>Strengths</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Completeness__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Altify Opportunity Competitor</label>
    <nameField>
        <label>Opportunity Competitor Extra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>